--- a/pages/accounts/account.html
+++ b/pages/accounts/account.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <title>Home Page</title>
+        <link rel="stylesheet" href="./style_account.css">
+    <title>Account Page</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
             <div class="nav-last-part">
                 <div class="nav-user-account-bar">
                     <i class="fa-regular fa-user"></i>
-                    <a href="pages/accounts/account.html">Account</a>
+                    <a href="/pages/accounts/account.html">Account</a>
                 </div>
                 <div class="nav-cart-bar">
                     <i class="fa-solid fa-cart-plus"></i>
@@ -32,21 +32,14 @@
                 </div>
             </div>
         </nav>
-        
-        <div class="container-menu-bar">
-            <ul class="menu-bar">
-                <li id="mobile">Mobile</li>
-                <li id="laptop">Laptop</li>
-                <li id="keyboard">Keyboard</li>
-                <li id="mouse">Mouse</li>
-                <li id="headphone">Headphone</li>
-            </ul>
-        </div>
     </header>
-    <hr>
     <main>
-        <!-- Main content goes here -->
+        <section class="registration_form">
+            <form action="">
+                
+            </form>
+        </section>
     </main>
-    <script src="script.js" defer></script>
+    <script src="./script_account.js"></script>
 </body>
 </html>
