--- a/pages/accounts/account.html
+++ b/pages/accounts/account.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="./style_account.css">
+    <link rel="stylesheet" href="./style_account.css">
     <title>Account Page</title>
 </head>
+
 <body>
     <header>
         <nav class="container">
@@ -34,12 +36,65 @@
         </nav>
     </header>
     <main>
-        <section class="registration_form">
-            <form action="">
-                
+        <section id="registration">
+            <h1>Create Your MyShop Account</h1>
+            <form action="" class="registration_form_container">
+                <div>
+                    <label for="first-name">First Name:</label>
+                    <input type="text" id="first-name" name="first-name">
+                </div>
+                <div>
+                    <label for="last-name">Last Name:</label>
+                    <input type="text" id="last-name" name="last-name">
+                </div>
+                <div>
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div>
+                    <label for="street-address">Street Address:</label>
+                    <input type="text" id="street-address" name="street-address">
+                </div>
+                <div>
+                    <label for="city">City:</label>
+                    <input type="text" id="city" name="city">
+                </div>
+                <div>
+                    <label for="apt">APT./FL./Suite No.:</label>
+                    <input type="text" id="apt" name="apt">
+                </div>
+                <div>
+                    <label for="country">Country:*</label>
+                    <input type="text" id="country" name="country">
+                </div>
+                <div>
+                    <label for="zip-code">Zip Code:*</label>
+                    <input type="text" id="zip-code" name="zip-code">
+                </div>
+                <div>
+                    <label for="state">State/Province:*</label>
+                    <input type="text" id="state" name="state">
+                </div>
+                <div>
+                    <label for="telephone">Telephone Number:*</label>
+                    <input type="text" id="telephone" name="telephone">
+                </div>
+                <div>
+                    <label for="fax">Fax Number:</label>
+                    <input type="text" id="fax" name="fax">
+                </div>
+                <div>
+                    <label for="password">Password:*</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div>
+                    <label for="password-confirmation">Password Confirmation:*</label>
+                    <input type="password" id="password-confirmation" name="password-confirmation">
+                </div>
             </form>
         </section>
     </main>
     <script src="./script_account.js"></script>
 </body>
+
 </html>
