--- a/pages/accounts/account.html
+++ b/pages/accounts/account.html
@@ -37,61 +37,68 @@
     </header>
     <main>
         <section id="registration">
-            <h1>Create Your MyShop Account</h1>
+            <div class="registration-title">
+                <div class="create-account-title">
+                    <h1>Create Your MyShop Account</h1>
+                </div>
+                <div class="login-title">
+                    <span>
+                        Already Have an Account?
+                        <a href="../login/login.html">Login</a>
+                        here.
+                    </span>
+                </div>
+            </div>
             <form action="" class="registration_form_container">
-                <div>
-                    <label for="first-name">First Name:</label>
-                    <input type="text" id="first-name" name="first-name">
+                <div class="first-name">
+                    <input type="text" id="first-name" required placeholder="First Name">
                 </div>
-                <div>
-                    <label for="last-name">Last Name:</label>
-                    <input type="text" id="last-name" name="last-name">
+                <div class="last-name">
+                    <input type="text" id="last-name" required placeholder="Last Name">
                 </div>
-                <div>
-                    <label for="email">Email Address:</label>
-                    <input type="email" id="email" name="email">
+                <div class="email">
+                    <input type="email" id="email" required placeholder="Email">
                 </div>
-                <div>
-                    <label for="street-address">Street Address:</label>
-                    <input type="text" id="street-address" name="street-address">
+                <div class="gender-type">
+                    <select id="gender" required>
+                        <option value="" disabled selected>Select Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
                 </div>
-                <div>
-                    <label for="city">City:</label>
-                    <input type="text" id="city" name="city">
+                <div class="street-address">
+                    <input type="text" id="street-address" required placeholder="Street Address">
                 </div>
-                <div>
-                    <label for="apt">APT./FL./Suite No.:</label>
-                    <input type="text" id="apt" name="apt">
+                <div class="city">
+                    <input type="text" id="city" required placeholder="City">
                 </div>
-                <div>
-                    <label for="country">Country:*</label>
-                    <input type="text" id="country" name="country">
+                <div class="apt">
+                    <input type="text" id="apt" placeholder="APT./FL./Suite No.:">
                 </div>
-                <div>
-                    <label for="zip-code">Zip Code:*</label>
-                    <input type="text" id="zip-code" name="zip-code">
+                <div class="country">
+                    <input type="text" id="country" required placeholder="Country">
                 </div>
-                <div>
-                    <label for="state">State/Province:*</label>
-                    <input type="text" id="state" name="state">
+                <div class="zip-code">
+                    <input type="text" id="zip-code" placeholder="Zip Code">
                 </div>
-                <div>
-                    <label for="telephone">Telephone Number:*</label>
-                    <input type="text" id="telephone" name="telephone">
+                <div class="state">
+                    <input type="text" id="state" required placeholder="State/Province">
                 </div>
-                <div>
-                    <label for="fax">Fax Number:</label>
-                    <input type="text" id="fax" name="fax">
+                <div class="telephone">
+                    <input type="text" id="telephone" required placeholder="Telephone Number">
                 </div>
-                <div>
-                    <label for="password">Password:*</label>
-                    <input type="password" id="password" name="password" >
+                <div class="fax">
+                    <input type="text" id="fax" placeholder="Fax">
                 </div>
-                <div>
-                    <label for="password-confirmation">Password Confirmation:*</label>
-                    <input type="password" id="password-confirmation" name="password-confirmation">
+                <div class="password">
+                    <input type="password" id="password" required placeholder="Password">
                 </div>
+                <div class="confirm-password">
+                    <input type="password" id="password-confirmation" required placeholder="Confirm Password">
+                </div>
+                <button>Submit</button>
             </form>
+            
         </section>
     </main>
     <script src="./script_account.js"></script>
