--- a/pages/accounts/account.html
+++ b/pages/accounts/account.html
@@ -96,7 +96,7 @@
                 <div class="confirm-password">
                     <input type="password" id="password-confirmation" required placeholder="Confirm Password">
                 </div>
-                <button>Submit</button>
+                <button class="submit-button">Submit</button>
             </form>
             
         </section>
