--- a/pages/forgot/forgot.html
+++ b/pages/forgot/forgot.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 
 <head>
@@ -7,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style_login.css">
+    <link rel="stylesheet" href="./style_forgot.css">
     <title>Account Page</title>
 </head>
 
@@ -35,33 +34,30 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section id="login">
-            <div class="login-title">
-                <div class="login-account-title">
-                    <h1>Welcome to MyShop! Please login.</h1>
+   <main>
+        <section id="forgot">
+            <div class="forgot-title">
+                <h1>Forgot Your Account</h1>
+            </div>
+            <!-- div class="registration-title">
+                <div class="create-account-title">
+                    <h1>Create Your MyShop Account</h1>
                 </div>
-                <div class="registration-title">
+                <div class="login-title">
                     <span>
-                        New member?
-                        <a href="../accounts/account.html">Register</a>
+                        Already Have an Account?
+                        <a href="../login/login.html">Login</a>
                         here.
                     </span>
                 </div>
-            </div>
-            <form action="" class="login_form_container">
+            </div> -->
+            <form action="" class="forgot_form_container">
                 <div class="email">
                     <input type="email" id="email" required placeholder="Email">
                 </div>
-                <div class="password">
-                    <input type="password" id="password" required placeholder="Password">
-                </div>
-                <div class="forgot-password">
-                    <a href="../forgot/forgot.html">Forgot Password</a>
-                </div>
-                <button class="login-button">Login</button>
+                <button class="submit-button">Send</button>
             </form>
         </section>
     </main>
-    <script src="../script_login.js"></script>
+    <script src="../script_forgot.js"></script>
 </body>
