forgot password update

--- a/pages/forgot/forgot.html
+++ b/pages/forgot/forgot.html
@@ -39,18 +39,9 @@
             <div class="forgot-title">
                 <h1>Forgot Your Account</h1>
             </div>
-            <!-- div class="registration-title">
-                <div class="create-account-title">
-                    <h1>Create Your MyShop Account</h1>
-                </div>
-                <div class="login-title">
-                    <span>
-                        Already Have an Account?
-                        <a href="../login/login.html">Login</a>
-                        here.
-                    </span>
-                </div>
-            </div> -->
+            <div class="forgot-text">
+                <p>Please provide your registered email address to reset your password.</p>
+            </div>
             <form action="" class="forgot_form_container">
                 <div class="email">
                     <input type="email" id="email" required placeholder="Email">
