--- a/pages/admin/add_product/add_product.html
+++ b/pages/admin/add_product/add_product.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_admin.css">
+    <link rel="stylesheet" href="style_add_product.css">
     <title>Admin Panel</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="admin.html">MyShop</a>
+            <a href="../admin.html">MyShop</a>
         </div>
         <div class="header-title">
             <h1>Admin Dashboard</h1>
@@ -24,16 +24,16 @@
                 <div class="menu-list">
                     <ul>
                         <li>
-                            <a href="./product_list/product_list.html">Product List</a>
+                            <a href="../product_list/product_list.html">Product List</a>
                         </li>
                         <li>
-                            <a href="./add_product/add_product.html">Add Product</a>
+                            <a href="../add_product/add_product.html">Add Product</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </section>
-        <!-- <section class="product-add-form">
+        <section class="product-add-form">
             <form action="">
                 <div class="form-group">
                     <label for="name">Product Name:</label>
@@ -42,7 +42,7 @@
                 <div class="form-group">
                     <label for="categories">Categories:</label>
                     <select id="categories" name="categories" required>
-                        <option>Select a category</option>
+                        <option disabled selected>Select a category</option>
                         <option value="mobile">Mobile</option>
                         <option value="laptop">Laptop</option>
                         <option value="keyboard">Keyboard</option>
@@ -62,7 +62,7 @@
                     <button type="add">Add</button>
                 </div>
             </form>
-        </section> -->
+        </section>
         
     </main>
 </body>
