update admin and cart

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="nav-cart-bar">
                     <i class="fa-solid fa-cart-plus"></i>
-                    <a href="#">Cart</a>
+                    <a href="/pages/cart/cart.html">Cart</a>
                 </div>
             </div>
         </nav>
