--- a/pages/admin/product_list/product_list.html
+++ b/pages/admin/product_list/product_list.html
@@ -34,8 +34,43 @@
             </div>
         </section>
         <section class="product-list">
-            <div class="list-type-name">
-                
+            <div class="admin-dashboard">
+                <table class="product-table">
+                    <thead>
+                        <tr>
+                            <th>NO.</th>
+                            <th>IMG</th>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Categories</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td><img src="https://via.placeholder.com/50" alt="Product 1"></td>
+                            <td>Lorem ipsum dolor sit amet consectetur </td>
+                            <td>$10.00</td>
+                            <td>Mobile</td>
+                            <td>
+                                <button>edit</button>
+                                <button>Delete</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td><img src="https://via.placeholder.com/50" alt="Product 1"></td>
+                            <td>hello</td>
+                            <td>$10.00</td>
+                            <td>Laptop</td>
+                            <td>
+                                <button>edit</button>
+                                <button>Delete</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
