--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -8,7 +8,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style_cart.css">
-    <title>Home Page</title>
+    <title>cart</title>
 </head>
 
 <body>
@@ -81,7 +81,9 @@
                 <!--  -->
                 <div class="cart-summary">
                     <p id="total-price">Total: <span> 10000000.00</span></p>
-                    <button class="checkout-btn">Check Out</button>
+                    <button class="checkout-btn">
+                        <a href="/pages/cart/checkout/checkout.html">Check Out</a>
+                    </button>
                 </div>
             </div>
         </section>
