product card and cart

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home Page</title>
 </head>
+
 <body>
     <header>
         <nav class="container">
@@ -32,7 +34,7 @@
                 </div>
             </div>
         </nav>
-        
+
         <div class="container-menu-bar">
             <ul class="menu-bar">
                 <li id="mobile">Mobile</li>
@@ -45,8 +47,118 @@
     </header>
     <hr>
     <main>
-        <!-- Main content goes here -->
+        <section class="product-view">
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button> <!-- need to add link -->
+                    <button class="add-to-cart">Add Cart</button> <!-- need to add .... -->
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Cart</button>
+                </div>
+            </div>
+            <div class="product-card">
+                <a href="https://example.com/product-link" class="product-link">
+                    <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
+                        alt="iPhone 15 Plus" class="product-image">
+                </a>
+                <h2 class="product-name">iPhone 15 Plus</h2>
+                <p class="product-price"> <span class="price-text">Price: </span>111000</p>
+                <div class="buttons">
+                    <button class="buy-now">Buy Now</button>
+                    <button class="add-to-cart">Add Card</button>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="script.js" defer></script>
 </body>
+
 </html>
