--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
         <section class="product-view">
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <a href="https://example.com/product-link" class="product-link">
+                <a href="/pages/product_details/product_details.html" class="product-link">
                     <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
                         alt="iPhone 15 Plus" class="product-image">
                 </a>
