--- a/pages/admin/add_product/add_product.html
+++ b/pages/admin/add_product/add_product.html
@@ -35,11 +35,13 @@
         </section>
         <section class="product-add-form">
             <form action="">
-                <div class="form-group">
+
+                <div class="product-name">
                     <label for="name">Product Name:</label>
                     <input type="text" id="name" name="name" required>
                 </div>
-                <div class="form-group">
+
+                <div class="product-categories">
                     <label for="categories">Categories:</label>
                     <select id="categories" name="categories" required>
                         <option disabled selected>Select a category</option>
@@ -50,21 +52,41 @@
                         <option value="headphone">Headphone</option>
                     </select>
                 </div>
-                <div class="form-group">
+
+                <div class="product-price">
                     <label for="price">Price:</label>
                     <input type="number" id="price" name="price" step="0.01" required>
                 </div>
-                <div class="form-group">
-                    <label for="image">Product Image:</label>
-                    <input type="file" id="image" name="image" accept="image/*" required>
+
+                <div class="product-code">
+                    <label for="code">Product Code:</label>
+                    <input type="text" id="code" name="code" required>
                 </div>
+
+                <div class="product-description">
+                    <label>Product Description:</label>
+                    
+                    <textarea id="description" name="description" rows="4" required></textarea>
+                </div>
+
+                <div class="front-image">
+                    <label for="front-image">Front Image:</label>
+                    <input type="file" id="front-image" name="front-image" accept="image/*" required>
+                </div>
+
+                <div class="other-images">
+                    <label for="other-images">Other Images:</label>
+                    <input type="file" id="other-images" name="other-images[]" accept="image/*" multiple required>
+                </div>
+
                 <div class="form-group">
-                    <button type="add">Add</button>
+                    <button type="submit">Add</button>
                 </div>
             </form>
         </section>
-        
+
     </main>
+    <script src="/pages/admin/add_product/script_add_product.js"></script>
 </body>
 
 </html>
