update zoom feature

--- a/pages/product_details/product_details.html
+++ b/pages/product_details/product_details.html
@@ -50,21 +50,22 @@
         <section class="">
             <div class="product-container">
                 <div class="product-image-section">
-                    <div class="product-image">
-                        <!-- Placeholder for the main product image -->
+                    <div class="product-image" id="imageZoom"
+                        style="--url: url('https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg'); --zoom-x: 0%; --zoom-y: 0%; --display: none;">
                         <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
-                        alt="iPhone 15 Plus" class="product-image">
+                            alt="iPhone 15 Plus" class="product-image">
+                        <div id="myresult" class="img-zoom-result"></div>
                     </div>
                     <div class="product-thumbnails">
                         <!-- Placeholder for the product thumbnail images -->
                         <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
-                        alt="iPhone 15 Plus" class="product-image">
+                            alt="iPhone 15 Plus" class="product-image">
                         <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
-                        alt="iPhone 15 Plus" class="product-image">
+                            alt="iPhone 15 Plus" class="product-image">
                         <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
-                        alt="iPhone 15 Plus" class="product-image">
+                            alt="iPhone 15 Plus" class="product-image">
                         <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-15-Plus-(2)-(1)-6945.jpg"
-                        alt="iPhone 15 Plus" class="product-image">
+                            alt="iPhone 15 Plus" class="product-image">
                     </div>
                 </div>
 
@@ -88,7 +89,7 @@
             <div class="description-section">
                 <h3>Description</h3>
                 <p>
-                    
+
                 </p>
             </div>
 
