make homepage responsive

--- a/pages/product_details/product_details.html
+++ b/pages/product_details/product_details.html
@@ -83,6 +83,20 @@
                         <button type="button">Buy Now</button>
                         <button type="button">Add to Cart</button>
                     </div>
+                    <div class="like-share">
+                        <div class="like">
+                            <i class="fas fa-thumbs-up"></i>
+                        </div>
+                        <div class="share">
+                            <i class="fas fa-share"></i>
+                            <ul class="share-menu">
+                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
@@ -99,3 +113,5 @@
 </body>
 
 </html>
+
+
