make homepage responsive

--- a/pages/accounts/account.html
+++ b/pages/accounts/account.html
@@ -49,7 +49,7 @@
                     </span>
                 </div>
             </div>
-            <form action="" class="registration_form_container">
+            <form action="" method="post" class="registration_form_container">
                 <div class="first-name">
                     <input type="text" id="first-name" required placeholder="First Name">
                 </div>
